# OSLab1

./: .gitignore  CMakeLists.txt  main  main.c  setup.sh
include/: functions.h
src/: CosineSeries.c  FillDate.c  FillDateStruct.c  PrintArrays.c  functions.c
